# vector-db-handroll

./: .dockerignore  .gitignore  Dockerfile  README.md  Vector DB.postman_collection.json  demo.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest.ini
app/: app.py  main.py
app/api/: library_router.py
app/api/dto/: library.py
app/classes/: BruteForceIndex.py  Chunk.py  Document.py  Library.py  vector_store.py
app/core/: Chunk.py  Document.py  Filter.py  Library.py
app/indexes/: BallTreeIndex.py  BaseIndex.py  BruteForceIndex.py
app/services/: LibraryService.py  VectorStore.py  globals.py  library_service.py  vector_store.py  vector_store_old.md
app/tests/: test_ball_trees.py  test_brute_force_cosine_index.py  test_chunks.py  test_documents.py  test_e2e_cohere.py  test_e2e_openai.py  test_libraries.py  test_library_router.py  test_read_write_lock.py  test_vector_store_with_two_libraries.py
app/utils/: filters.py  openai.py  read_write_lock.py
sdk/: LibraryClient.py  library_client.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: index.css  main.tsx
ui/src/components/App/: App.tsx  DataModule.ts
ui/utils/: library.ts
