[project]
name = "stack-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Utkarsh Pant",email = "utkarsh.pant@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "openai (>=1.82.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.1.0"

